<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="5dp" >
 
    <Spinner
    	android:id="@+id/sign_spinner"
    	android:layout_gravity="fill_horizontal"
    	android:entries="@array/signArray"
        android:prompt="@string/promptText"
        android:background="@color/primary_shade"
        android:textAlignment="center"
        android:spinnerMode="dropdown"
        android:popupBackground="@drawable/primary_bg_gradient" />
    <ImageView 
        android:id="@+id/element_image"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:contentDescription="@string/element"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/air_el"/>
 
    <TextView
        android:id="@+id/grid_item_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginTop="5dp" >
    </TextView>
 
</LinearLayout>