<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linlay_box"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:background="@android:color/transparent"
    android:layout_column="0"
    android:baselineAligned="false"
    android:layout_row="1" >
    <LinearLayout 
        android:id="@+id/linlay_two"
        android:orientation="vertical"
        android:background="@android:color/transparent"
        android:layout_width="0dp"
    	android:layout_weight=".3"
    	android:layout_marginRight="10dp"
    	android:layout_height="wrap_content" >
        <Button
            android:layout_width="120dp"
        	android:id="@+id/saveSetting"
        	android:layout_gravity="left"
        	android:layout_height="90dp"
        	android:padding="20dp"
        	android:layout_marginLeft="10dp"
        	android:layout_marginRight="10dp"
        	android:layout_marginBottom="10dp"
        	android:background="@drawable/button_gradient_one"
        	android:text="@string/saveButtonText" />
        
    </LinearLayout>
    <LinearLayout 
        android:layout_width="0dp"
        android:layout_weight=".7"
        android:id="@+id/linlay_three"
        android:orientation="vertical"
        android:gravity="left"
        android:layout_gravity="left"
    	android:background="@android:color/transparent"
    	android:layout_height="wrap_content" >
        <TextView 
            style="@style/baseStyle.blue"
            android:padding="20dp"
            android:layout_width="match_parent"
        	android:layout_gravity="left"
        	android:layout_marginRight="10dp"
        	android:id="@+id/horoscopeDisplay"
        	android:layout_height="match_parent"
        	android:text="@string/selectASignForHoroscope"/>
        	<Button
            android:layout_width="match_parent"
        	android:id="@+id/openWeb"
        	android:layout_gravity="left"
        	android:layout_height="50dp"
        	android:padding="10dp"
        	android:layout_marginTop="10dp"
        	android:layout_marginRight="10dp"
        	android:layout_marginBottom="10dp"
        	android:background="@drawable/button_gradient_one"
        	android:text="@string/viewInWebview" />
        
    </LinearLayout>
    </LinearLayout>